--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "hbs": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "nodemon": "^2.0.2"
   }
